# SJ_RDMAv1

./: CMakeLists.txt  my_impl.hpp  pre_connector.hpp  qp.hpp  rdma_ctrl.hpp
RC_READ/: client.cpp  server.cpp
RC_WRITE/: client.cpp  server.cpp
example/: client.cpp  server.cpp
ralloc/: libssmalloc.la  new_delete.lo  ssmalloc.lo
ralloc/.libs/: libssmalloc.la  libssmalloc.lai
